[tool.poetry]
name = "confz"
version = "2.1.0"
description = "ConfZ is a configuration management library for Python based on pydantic."
license = "MIT"
authors = ["Zühlke"]
readme = "README.md"
homepage = "https://github.com/Zuehlke/ConfZ"
repository = "https://github.com/Zuehlke/ConfZ"
documentation = "https://confz.readthedocs.io"
keywords = ["Configuration Management", "Config Management"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8.0"
pydantic = ">=1.9.0, <3.0.0"
PyYAML = ">=5.4.1, <7.0.0"
python-dotenv = ">=0.19.2, <2.0.0"
toml = "^0.10.2"
jinja2 = ">=3.1.5, <4.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
Sphinx = "^5.3.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
black = {extras = ["d"], version = "^24.3.0"}
mypy = "^1.4.1"
pylint = "^3.2.4"
types-PyYAML = "^6.0.12"
types-toml = "^0.10.8"

[tool.black]
# Use default black configuration

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "too-few-public-methods"
]
extension-pkg-whitelist = "pydantic"

[tool.pylint.format]
max-line-length = "88"              # to work together with black

[tool.mypy]
# Use default mypy configuration

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
